--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <groupId>com.turbur</groupId>
     <artifactId>springboot_test</artifactId>
     <name>springBoot框架练习</name>
-    <packaging>pom</packaging><!--打包方式-->
+    <packaging>war</packaging><!--打包方式-->
     <version>1.0</version>
 
     <dependencies>
