--- a/mySpringBoot_webapp/pom.xml
+++ b/mySpringBoot_webapp/pom.xml
@@ -7,8 +7,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mySpringBoot_webapp</artifactId>
-    <packaging>war</packaging>
-    <name>mySpringBoot_webapp Maven Webapp</name>
+    <packaging>pom</packaging>
+    <name>mySpringBoot_webapp_server1</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
