--- a/mySpringBoot_webapp/pom.xml
+++ b/mySpringBoot_webapp/pom.xml
@@ -5,11 +5,12 @@
         <groupId>com.turbur</groupId>
         <version>1.0</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mySpringBoot_webapp</artifactId>
     <packaging>pom</packaging>
-    <name>mySpringBoot_webapp_server1</name>
-    <url>http://maven.apache.org</url>
+    <version>v1.0</version>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
