--- a/mySpringBoot/pom.xml
+++ b/mySpringBoot/pom.xml
@@ -53,17 +53,35 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.4</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.webjars.bower/qrcode -->
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>qrcode</artifactId>
-            <version>1.0.2</version>
-        </dependency>
         <!--生成二维码-->
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
             <version>3.3.3</version>
+        </dependency>
+        <!--文件上传-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <!--集成redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+            <version>1.4.1.RELEASE</version>
+        </dependency>
+        <!--SFTPUtil 依赖jar包-->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.44-1</version>
+        </dependency>
+        <!--md5加密 DigestUtils-->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.8</version>
         </dependency>
     </dependencies>
     <build>
