--- a/mySpringBoot/src/main/resources/application.yml
+++ b/mySpringBoot/src/main/resources/application.yml
@@ -25,3 +25,17 @@ spring:
         prefix: /WEB-INF/pages/jsp/
         #响应页面默认后缀
         suffix: .jsp
+
+
+person:
+  lastName: hello
+  age: 18
+  boss: false
+  birth: 2017/12/12
+  maps: {k1: v1,k2: 12}
+  lists:
+    ‐ lisi
+    ‐ zhaoliu
+  dog:
+    name: 小狗
+    age: 2
