--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <!--子模块-->
     <modules>
         <module>mySpringBoot</module>
-        <module>mySpringBoot_webapp</module>
+        <!--<module>mySpringBoot_webapp</module>-->
     </modules>
     <build>
         <plugins>
