--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -7,6 +7,8 @@
 	<groupId>com.xulz</groupId>
 	<artifactId>webservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<!-- 应用jsp页面时，需要打war包，用java -jar 也能启动 -->
+	<!-- <packaging>war</packaging> -->
 	<packaging>jar</packaging>
 
 	<name>webservice</name>
@@ -138,13 +140,7 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core -->
-		<dependency>
-		    <groupId>com.sun.xml.bind</groupId>
-		    <artifactId>jaxb-core</artifactId>
-		    <version>2.2.11</version>
-		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -184,7 +180,6 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -195,6 +190,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 
 </project>
