--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -163,6 +163,8 @@
 			<groupId>com.mzb</groupId>
 			<artifactId>sdk</artifactId>
 			<version>1.0.0</version>
+			<systemPath>${basedir}/sdk/sdk-1.0.0.jar</systemPath>
+			<scope>system</scope>
 		</dependency>
 		<!-- java 调用webservice接口（asmx） -->
 		<dependency>
