--- a/webservice/.gitignore
+++ b/webservice/.gitignore
@@ -15,6 +15,9 @@
 *.iws
 *.iml
 *.ipr
+.mvn
+.settings
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -23,3 +26,5 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+/src/main/resources/rebel.xml
