--- a/interface-proxy/pom.xml
+++ b/interface-proxy/pom.xml
@@ -164,7 +164,7 @@
             <groupId>com.mzb</groupId>
             <artifactId>sdk</artifactId>
             <version>1.0.0</version>
-            <systemPath>${basedir}/sdk/sdk-1.0.0.jar</systemPath>
+            <systemPath>${basedir}/src/main/resources/sdk/sdk-1.0.0.jar</systemPath>
             <scope>system</scope>
         </dependency>
         <!-- 国家接口交通厅sdk -->
@@ -172,7 +172,7 @@
             <groupId>com.jtt</groupId>
             <artifactId>sdk</artifactId>
             <version>1.0.0</version>
-            <systemPath>${basedir}/sdk/com.jiuqi.bi.rest.runtime.jar</systemPath>
+            <systemPath>${basedir}/src/main/resources/sdk/com.jiuqi.bi.rest.runtime.jar</systemPath>
             <scope>system</scope>
         </dependency>
         <!-- java 调用webservice接口（asmx） -->
