--- a/interface-proxy/pom.xml
+++ b/interface-proxy/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>interface-proxy</artifactId>
     <version>1.0.0</version>
     <!-- 应用jsp页面时，需要打war包，用java -jar 也能启动 -->
-    <!-- <packaging>war</packaging> -->
+    <!--<packaging>war</packaging>-->
     <packaging>jar</packaging>
 
     <name>interface-proxy</name>
@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -83,8 +83,7 @@
         <!--集成redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-redis</artifactId>
-            <version>1.4.1.RELEASE</version>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <!-- spring session的依赖(session共享) -->
         <!--<dependency> <groupId>org.springframework.session</groupId> <artifactId>spring-session-data-redis</artifactId>
@@ -104,7 +103,7 @@
             <artifactId>httpasyncclient</artifactId>
             <version>4.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+        <!-- commons-httpclient -->
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
@@ -117,13 +116,13 @@
             <version>4.6.6</version>
         </dependency>
         <!-- 民政部sdk需要的jar -->
-        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <!-- commons-codec -->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.9</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+        <!-- commons-logging -->
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
@@ -134,14 +133,14 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+        <!-- dom4j -->
         <dependency>
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
+        <!-- jackson-mapper-asl -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
@@ -176,15 +175,15 @@
             <artifactId>axis</artifactId>
             <version>1.4</version>
         </dependency>
+        <!-- tomcat -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
         <!-- jsp 必须加！-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-jasper</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
